solved whitespaces

--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -194,4 +194,6 @@
   color: gray;
   font-size: 10px;
 }
-
+.showSpaces {
+  white-space: pre-wrap;
+}
